<resources>
    <string name="app_name">Instruments Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_insert_dummy_instrument">Insert test instrument</string>
    <string name="title_activity_delete_all">Delete all instruments</string>

    <!--Hints for edit text fields-->
    <string name="hint_product_name">Name of the product...</string>
    <string name="hint_price">Product\'s price...</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_country_of_origin">Product\'s country of origin...</string>
    <string name="hint_supplier_name">Supplier name...</string>
    <string name="hint_supplier_phone_number">Supplier phone number...</string>

    <!--Hints for empty state text fields-->
    <string name="emty_header">Wandering how to populate fields?</string>
    <string name="empty_product_name">Name of the product: text, required</string>
    <string name="empty_price">Product\'s price: number</string>
    <string name="empty_quantity">Quantity of products: number</string>
    <string name="empty_country_of_origin">Product\'s country of origin: text, required</string>
    <string name="empty_supplier_name">Supplier name: text, required</string>
    <string name="empty_supplier_phone_number">Supplier phone number: numbers, required</string>

    <!-- Order button-->
    <string name="orderButton">Order from supplier</string>

    <!--Editor Activity-->
    <!-- Title for the activity to add a new instrument -->
    <string name="editor_activity_title_new_instrument">Add an instrument</string>

    <!-- Title for the activity to edit an existing instrument -->
    <string name="editor_activity_title_edit_instrument">Edit instrument</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <string name="editor_insert_instrument_failed">Insert Instrument failed.</string>

    <string name="editor_insert_instrument_successful">Instrument inserted successfully.</string>

    <string name="editor_update_instrument_failed">Instrument update failed.</string>

    <string name="editor_update_instrument_successful">Instrument updatet successfully.</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Pet deleted</string>
    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting pet</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>
    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>





</resources>
