<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CatalogActivity"
    tools:showIn="@layout/activity_catalog">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite" />

    <!--FAB button-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Empty state app-->
    <LinearLayout
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/cat_activ_lin_lay_main">

        <!--Header text View-->
        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/empty_state_header_margin_bottom"
            android:text="@string/emty_header" />

        <!-- Product name field -->
        <TextView
            android:id="@+id/edit_product_name"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/empty_product_name" />

        <!-- Product price field -->
        <TextView
            android:id="@+id/edit_price"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/empty_price" />

        <!-- Product quantity field -->
        <TextView
            android:id="@+id/edit_quantity"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/empty_quantity" />

        <!-- Product country of origin field -->
        <TextView
            android:id="@+id/edit_country_of_origin"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/empty_country_of_origin" />

        <!-- Supplier name field -->
        <TextView
            android:id="@+id/edit_supplier_name"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/empty_supplier_name" />

        <!-- Supplier phone number field -->
        <TextView
            android:id="@+id/edit_supplier_phone_number"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/empty_supplier_phone_number" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/empty_state_IV"
            android:layout_weight="5"
            android:scaleType="center"
            android:src="@drawable/instr" />
    </LinearLayout>
</RelativeLayout>